--- a/sass/style.sass
+++ b/sass/style.sass
@@ -332,6 +332,22 @@ a.infobutton
 			text-transform: uppercase
 
 
+
+// Pages
+.home
+	background-color: #fff
+	.feature
+		background-color: #000
+		font-family: "ff-ernestine-web-pro", $slab-font-family
+		color: #d7d0ba
+		padding: 2em
+		.quote
+			font-size: 2.5em
+		.byline
+			font-size: 1.25em
+
+
+
 @media all and (max-width: 768px)
 	.slide 
 		position: absolute
