Add student images, update portfolio images

--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -27,9 +27,10 @@ html.no-js(lang="en")
 		header.main
 			h1 Nate Walton
 			nav
-				a.work(href="/") Work
-				a.teaching(href="/") Teaching
-				a.contact(href="/") Contact
+				a.home(href="/") Home
+				a.work(href="/portfolio.html") Work
+				a.teaching(href="/students.html") Teaching
+				a.contact(href="/contact.html") Contact
 
 		block content
 
