--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -2,6 +2,9 @@ html.no-js(lang="en")
 	head
 		//- var assetBase = '';
 		- var assetBase = 'http://static.nkwalton.com/';
+		//- var extension = '.html';
+		- var extension = '';
+
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 		block title
@@ -29,9 +32,9 @@ html.no-js(lang="en")
 				a(href="/") Nate Walton
 			nav
 				a.home(href="/") Home
-				a.work(href="/portfolio") Work
-				a.teaching(href="/students") Teaching
-				// a.contact(href="/contact") Contact
+				a.work(href="/portfolio" + extension) Work
+				a.teaching(href="/students" + extension) Teaching
+				// a.contact(href="/contact" + extension) Find me
 
 		block content
 
