Update image loader style

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -411,7 +411,7 @@ body.home
 		background-color: #000
 		font-family: "ff-ernestine-web-pro", $slab-font-family
 		color: #d7d0ba
-		padding: 2.75em 5% 2.5em
+		padding: 4.75em 5% 4.5em
 		.quote
 			font-size: 2.5em
 			line-height: 1.1
@@ -426,7 +426,7 @@ body.home
 				display: inline-block
 				margin-right: 0.25em
 	.wrapper
-		padding: 3em 0 1.5em
+		padding: 4em 0 2.5em
 		border-bottom: 1px solid #eee
 		padding-left: 10%
 		overflow: visible
@@ -444,7 +444,7 @@ body.home
 
 			&.heading
 				position: absolute
-				top: 1.75em
+				top: 2.75em
 				left: 5%
 				width: 80%
 				font-size: 12px
@@ -482,6 +482,7 @@ body.home
 	#intro .slide a
 		width: 49%
 		margin-bottom: 0.5em
+		padding-bottom: 36.75%
 
 
 @media all and (max-width: 550px)
@@ -495,6 +496,7 @@ body.home
 		width: 90%
 		margin-left: 5%
 		margin-bottom: 0.75em
+		padding-bottom: 67.5%
 
 @media all and (max-width: 375px)
 	header nav a.home
