--- a/sass/style.sass
+++ b/sass/style.sass
@@ -207,8 +207,11 @@ header.main
 	.image
 		z-index: 9
 		opacity: 1
+		pointer-events: none
 	.info
 		z-index: 8
+		a
+			color: $yellow3
 	.infoinner
 		color: mix( $yellow3, $yellow1 )
 		font-weight: 100
@@ -243,6 +246,9 @@ header.main
 			padding-left: 250px
 		.info
 			padding-right: 250px
+	
+	&#jonah-0 .dropcap
+		margin: 0.1em 0.2em 0 0
 
 
 // Info button
