--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,8 +1,8 @@
 html.no-js(lang="en")
 	head
 		//- var assetBase = '';
-		- var assetBase = 'http://static.nkwalton.com/';
 		//- var extension = '.html';
+		- var assetBase = 'http://static.nkwalton.com/';
 		- var extension = '';
 
 		meta(charset='UTF-8')
@@ -15,15 +15,16 @@ html.no-js(lang="en")
 		meta(name='viewport', content='width=device-width, , initial-scale=1')
 
 		// Place favicon.ico and apple-touch-icon.png in the root directory
-		link(rel='shortcut icon', href= assetBase + 'favicon.ico')
+		link(rel='shortcut icon', href=assetBase + 'favicon.ico?v=3')
 
 		// Styles
-		link(rel='stylesheet', href= assetBase + 'css/style.css')
+		link(rel='stylesheet', href=assetBase + 'css/style.css')
 
 		// Scripts loaded via script loader. See notes in init.js file.
 		script(type="text/javascript", src="//use.typekit.net/nyn3skg.js")
 		script(type="text/javascript").
-			try{Typekit.load();}catch(e){}
+			try{Typekit.load();}catch(e){};
+			window.localAssets = false;
 		script(src= assetBase + 'js/init.min.js')
 
 	body(class=page.menu)
