--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,9 +1,9 @@
 html.no-js(lang="en")
 	head
-		//- var assetBase = '';
-		//- var extension = '.html';
-		- var assetBase = 'http://static.nkwalton.com/';
-		- var extension = '';
+		- var localEnv = true;
+
+		- var assetBase = localEnv ? '' : 'http://static.nkwalton.com/';
+		- var extension = localenv ? '.html' : '';
 
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
@@ -24,7 +24,7 @@ html.no-js(lang="en")
 		script(type="text/javascript", src="//use.typekit.net/nyn3skg.js")
 		script(type="text/javascript").
 			try{Typekit.load();}catch(e){};
-			window.localAssets = false;
+			window.localAssets = #{localEnv};
 		script(src= assetBase + 'js/init.min.js')
 
 	body(class=page.menu)
