--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,6 +1,6 @@
 html.no-js(lang="en")
 	head
-		- var localEnv = true;
+		- var localEnv = false;
 
 		- var assetBase = localEnv ? '' : 'http://static.nkwalton.com/';
 		- var extension = localenv ? '.html' : '';
