--- a/sass/style.sass
+++ b/sass/style.sass
@@ -219,7 +219,7 @@ header.main
 		position: absolute
 		top: 40px
 		left: 0
-		padding-right: 10px
+		padding-left: 10px
 		opacity: 0
 		transition: all 0.3s ease
 		text-align: right
