--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -15,8 +15,10 @@ block content
 		for block in contents
 			.wrapper
 				a.heading(href=block.url + extension)!= block.heading
-				for image in block.images
-					a.preview.toLoad(href=block.url + extension + image.hash)
+				each image, i in block.images
+					a(class="preview toLoad image-" + i, href=block.url + extension + image.hash)
 						span.projectDesc
 							span.projectTitle #{image.title}
 						img.lazy.front(data-src=image.url, alt='')
+				a.viewall.next(href=block.url + extension)
+					span.link.visuallyhidden View all
