--- a/sass/shared/_mixins.scss
+++ b/sass/shared/_mixins.scss
@@ -102,3 +102,89 @@
 		background:		   linear-gradient(top, $top $topStop, $bottom $bottomStop); // W3C
 	}
 }
+
+@mixin spinner() {
+	@-moz-keyframes spin {
+		0% {
+			-moz-transform: rotate(0deg);
+		}
+		100% {
+			-moz-transform: rotate(359deg);
+		}
+	}
+	@-webkit-keyframes spin {
+		0% {
+			-webkit-transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(359deg);
+		}
+	}
+	@-o-keyframes spin {
+		0% {
+			-o-transform: rotate(0deg);
+		}
+		100% {
+			-o-transform: rotate(359deg);
+		}
+	}
+	@-ms-keyframes spin {
+		0% {
+			-ms-transform: rotate(0deg);
+		}
+		100% {
+			-ms-transform: rotate(359deg);
+		}
+	}
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(359deg);
+		}
+	}
+}
+
+@mixin spinner-reverse() {
+	@-moz-keyframes spin-reverse {
+		0% {
+			-moz-transform: rotate(0deg);
+		}
+		100% {
+			-moz-transform: rotate(-359deg);
+		}
+	}
+	@-webkit-keyframes spin-reverse {
+		0% {
+			-webkit-transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(-359deg);
+		}
+	}
+	@-o-keyframes spin-reverse {
+		0% {
+			-o-transform: rotate(0deg);
+		}
+		100% {
+			-o-transform: rotate(-359deg);
+		}
+	}
+	@-ms-keyframes spin-reverse {
+		0% {
+			-ms-transform: rotate(0deg);
+		}
+		100% {
+			-ms-transform: rotate(-359deg);
+		}
+	}
+	@keyframes spin-reverse {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(-359deg);
+		}
+	}
+}
