--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,17 +5,8 @@
 @import "base/h5bp"
 @import "base/basics"
 @import "typogrify"
-
-
-// Colors
-$yellow1: #a59463
-$yellow2: #a69564
-$yellow3: #d2cab1
-
-
-// Fonts
-$slab-font-family: "museo-slab", Helvetica, sans-serif
-$sans-font-family: "museo-sans", Helvetica, sans-serif
+@import "shared/mixins"
+@import "variables"
 
 
 // General
@@ -40,9 +31,12 @@ img
 	max-height: 100%
 
 
+
+// Image loader
+
 %imageloader
 	height: 0
-	background-color: #ebe7dd
+	background-color: $yellow4
 	img
 		position: absolute
 		top: 0
@@ -52,418 +46,29 @@ img
 	&.loading
 		img
 			opacity: 0
-
-
-// Header
-header.main
-	height: 40px
-	background-color: #1f1c13
-	border-bottom: 1px solid #373121
-	a
-		background-color: transparent
-		text-transform: uppercase
-		font-size: 0.9em
-		letter-spacing: 1px
-		font-weight: 500
-		transition: all 0.2s ease
-		height: 38px
-		padding-top: 9px
-	a:link, a:visited
-		color: #c4b898
-		opacity: 0.8
-	a:focus, a:hover
-		color: #c4b898
-		opacity: 1
-		text-decoration: none
-	a:active
-		color: #e1dccb
-	h1
-		margin: 0
-		font-size: 1em
-		position: absolute
-		top: 0
-		left: 5%
-		a
-			display: block
-			position: absolute
-			padding-left: 80px
-			background: transparent url(../img/logo.png) top left no-repeat
-			background-size: 75px 38px
-			white-space: nowrap
-			top: 1px
-			left: 0
-			margin-left: -2px
-	nav
-		position: absolute
-		top: 1px
-		right: 5%
-		margin-right: 5px
-		a
-			display: inline-block
-			margin-left: 10px
-			&:after
-				content: "//"
-				color: #766a47
-				padding-left: 10px
-				letter-spacing: 0
-			&:last-child:after
-				content: none
-
-
-
-// Portfolio
-
-.portfolio
-	background-color: #000
-	&, .project
-		overflow: visible
-	nav
-		position: absolute
-		top: 16px
-		right: 5%
-		z-index: 10
-		width: 100px
-		height: 40px
-		margin-right: -9px
-		z-index: 200
-		a.ir
-			transition: all 0.2s ease
-			display: block
-			height: 40px
-			width: 40px
-			background: url('../img/arrow.svg')
-			position: absolute
-			opacity: 0.75
-			&.next
-				right: 0px
-				background-position: -40px 0
-			&.prev
-				left: 0px
-			&:hover
-				opacity: 1
-
-
-.title
-	height: 67px
-	position: absolute
-	width: 100%
-	top: 0
-	left: -3%
-	border-bottom: 1px solid #272318
-	opacity: 0
-	transition: all 0.3s ease
-	.current &
-		opacity: 1
-		left: 0
-		z-index: 100
-	h2
-		margin: 0 5%
-		height: 67px
-		padding-top: 15px
-		font-family: $slab-font-family
-		font-weight: 500
-		font-size: 1.6875em
-		color: $yellow1
-		a
-			color: $yellow1
-			transition: all 0.2s ease
-			&:hover
-				color: mix($yellow1, $yellow3)
-				text-decoration: none
-
-
-.introimage, .projectLink
-	img.lazy
-		opacity: 1
-		transition: opacity 0.3s ease
-		.loading &
-			opacity: 0
-
-// a.preview
-// 	padding-bottom: 
-
-
-// Slides
-.slide
-	top: 68px
-	max-width: 90%
-	margin: 0 auto
-	transition: all 0.4s ease
-	opacity: 0
-	&.visible
-		z-index: 100
-		opacity: 1
-	.wrapper
-		position: absolute
-		top: 0
-		left: 0
-		width: 100%
-		min-height: 40px
-	.sizable
-		transition: all 0.3s ease
-		box-sizing: content-box		
-		margin: 0 auto
-		min-height: 40px
-	.image
-		z-index: 9
-		opacity: 1
-		pointer-events: none
-	.info
-		z-index: 8
-		a
+		&:before
+			content: "\21BB"
 			color: $yellow3
-	.infoinner
-		color: mix( $yellow3, $yellow1 )
-		font-weight: 100
-		width: 235px
-		position: absolute
-		top: 40px
-		left: 0
-		padding-left: 10px
-		opacity: 0
-		transition: all 0.3s ease
-		text-align: right
-		font-size: 14px
-		h3
-			color: $yellow2
-			font-weight: 700
-			text-transform: uppercase
-			font-size: 0.75em
-			margin: 1.25em 0 0.25em
-			letter-spacing: 1px
-		ul
-			list-style: none
-			margin: 0
-			li
-				margin: 0
-	.show-info &
-		max-width: 100%
-		&.intro
-			max-width: 90%
-		.infoinner
-			opacity: 1
-		.image, .button
-			padding-left: 250px
-		.info
-			padding-right: 250px
-	
-	&#jonah-0 .dropcap
-		margin: 0.1em 0.2em 0 0
-
-
-// Info button
-a.infobutton
-	display: block
-	z-index: 20
-	position: absolute
-	top: 10px
-	left: 0
-	margin-left: -45px
-	background: url('../img/arrow.svg') -80px 0
-	width: 40px
-	height: 40px
-	transition: all 0.3s ease
-	opacity: 0.75
-	&:hover
-		opacity: 1
-	.show-info &
-		left: 240px
-		-webkit-transform: rotate(-45deg)
-		-moz-transform: rotate(-45deg)
-		-o-transform: rotate(-45deg)
-		transform: rotate(-45deg)
-
-
-
-// Project intro page
-.intro
-	background-color: #000
-	font-size: 0.8em
-
-	.introimage
-		width: 32em
-		opacity: 0.15
-		margin: 0
-		min-width: 250px
-		max-width: 600px
-		margin-left: -10em
-		transition: margin-left 0.5s ease
-
-	.introtext 
-		font-family: $slab-font-family
-		margin: 0 auto
-		max-width: 35em
-		margin: 0 auto 0
-		h3
-			font-size: 0.95em
-			font-weight: 100
-			color: mix( $yellow1, #000, 60% )
-			font-weight: 700
-			letter-spacing: 2px
-			margin: 2em 0 1.5em
-			font-family: $sans-font-family
-			text-transform: uppercase
-		p
-			font-weight: 100
-			font-size: 1.5em
-			line-height: 1.5
-			color: mix( $yellow1, #fff, 80% )
-			.dropcap
-				font-family: "coquette", $slab-font-family
-				color: $yellow1
-				font-size: 3.05em
-				float: left
-				margin: 0.14em 0.08em 0 0
-				line-height: 0.8
-				font-weight: 100
-				opacity: 0.9
-			.leader
-				text-transform: uppercase
-				font-size: 0.8em
-				letter-spacing: 1px
-				font-weight: 300
-				font-family: "ff-ernestine-web-pro", $slab-font-family
-				margin-left: -0.1em
-				.caps
-					font-size: 1em
-
-	@media (min-width: 450px)
-		font-size: 0.85em
-	@media (min-width: 600px)
-		font-size: 0.9em
-		.introimage
-			opacity: 0.2
-		.introtext
-			text-shadow: 0 0 10px #000
-	@media (min-width: 750px)
-		font-size: 0.95em
-	@media (min-width: 800px)
-		font-size: 1em
-		.introimage
-			margin: 0 auto
 			opacity: 0.25
-			img
-				margin-left: -19em
-		.introtext
-			text-shadow: 0 0 10px #000, 0 0 20px #000
-	@media (min-width: 1200px)
-		font-size: 1.1em
+			display: block
+			position: absolute
+			padding: 4px 10px
+			-webkit-animation: spin 1.5s infinite linear
+			-moz-animation:    spin 1.5s infinite linear
+			-ms-animation: 	   spin 1.5s infinite linear
+			animation: 		   spin 1.5s infinite linear
+		&:hover:before
+			text-decoration: none
+
++spinner
 
 
+@import "header"
+@import "portfolio"
+@import "portfolio-intro"
+@import "portfolio-contents"
 
-
-
-// Table of contents
-#intro .slide
-	a
-		width: 31%
-		margin-left: 1%
-		margin-bottom: .25em
-		padding-bottom: 23.25%
-		@extend %imageloader
-		background-color: #15130d
-
-#intro .slide a, .home .content a.preview
-	max-width: 400px
-	display: inline-block
-	overflow: hidden
-	.projectDesc
-		z-index: 101
-		display: block
-		position: absolute
-		bottom: -1em
-		left: 0
-		width: 100%
-		background-color: rgba(#000, 0.65)
-		transition: all 0.3s ease
-		padding: .5em
-		line-height: 1.1
-		opacity: 0
-	&:hover .projectDesc
-		bottom: 0
-		opacity: 1
-	.projectTitle
-		display: block
-		font-size: 1.5em
-		font-weight: 100
-		color: $yellow3
-		font-family: $slab-font-family
-	.projectType
-		display: block
-		font-size: .75em
-		letter-spacing: 1px
-		margin-bottom: .2em
-		color: mix($yellow1, $yellow3)
-		text-transform: uppercase
-
-
-
-
-// Pages
-body.home
-	background-color: #fff
-	height: auto
-	max-height: initial
-	padding-top: 0
-	header
-		position: fixed
-		top: 0
-		left: 0
-		width: 100%
-		z-index: 200
-		box-shadow: 0 0 2em 10px #000
-	.feature
-		margin-top: 40px
-		background-color: #000
-		font-family: "ff-ernestine-web-pro", $slab-font-family
-		color: #d7d0ba
-		padding: 4.75em 5% 4.5em
-		.quote
-			font-size: 2.5em
-			line-height: 1.1
-			max-width: 15em
-		.byline
-			margin-top: 0.4em
-			font-size: 1.25em
-			color: #c4b898
-			margin-left: -0.25em
-			&:before
-				content: "-"
-				display: inline-block
-				margin-right: 0.25em
-	.wrapper
-		padding: 4em 0 2.5em
-		border-bottom: 1px solid #eee
-		padding-left: 10%
-		overflow: visible
-	.content
-		padding-bottom: 2em
-		a
-			display: inline-block
-			width: 28.63%
-			margin-right: 1%
-			&.preview
-				padding-bottom: 21.4725%
-				@extend %imageloader
-				@media all and (min-width: 1553px)
-					padding-bottom: 300px
-
-			&.heading
-				position: absolute
-				top: 2.75em
-				left: 5%
-				width: 80%
-				font-size: 12px
-				line-height: 1.1
-				color: #a69564
-				text-transform: uppercase
-				letter-spacing: 1px
-				transition: all 0.2s ease
-				&:hover
-					text-decoration: none
-					color: #5f5539
-	footer
-		height: 2em
+@import "home"
 
 
 @media all and (max-width: 768px)
@@ -507,34 +112,6 @@ body.home
 @media all and (max-width: 375px)
 	header nav a.home
 		display: none
-
-// Table of contents
-// #intro .slide
-// 	ul
-// 		clear: both
-// 	li
-// 		margin: 5px 4px
-// 		margin-top: -2em
-// 		transition: all 0.4s ease
-// 		display: block
-// 		float: left
-// 		border: 1px solid mix($yellow1, #000)
-// 		a
-// 			display: block
-// 			height: 2em
-// 			transition: all 0.4s ease
-// 			width: 180px
-// 			overflow: hidden
-// 			img
-// 				width: 400px
-// 				height: 300px
-// 				max-width: 400px
-// 				max-height: 300px
-// 	&.visible
-// 		li
-// 			margin-top: 0
-// 			a
-// 				height: 100px
 
 
 
