--- a/sass/style.sass
+++ b/sass/style.sass
@@ -90,11 +90,10 @@ img
 			padding-right: 5%
 	.show-info .slide .image
 		padding-left: 0
-	#intro .slide a
-		width: 49%
+	#intro .projectlinks
+		width: 48%
 		margin-bottom: 0.5em
-		padding-bottom: 36.75%
-
+		padding-bottom: 48% * 0.75
 
 @media all and (max-width: 550px)
 	header.main h1 a
@@ -103,11 +102,11 @@ img
 
 
 @media all and (max-width: 480px)
-	#intro .slide a
+	#intro .projectlinks
 		width: 90%
 		margin-left: 5%
 		margin-bottom: 0.75em
-		padding-bottom: 67.5%
+		padding-bottom: 90% * 0.75
 
 @media all and (max-width: 375px)
 	header nav a.home
