Update intro text sizing

--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,11 +1,11 @@
 html.no-js(lang="en")
 	head
 		- var localEnv = false;
-		- var cssVersion = 6
+		- var cssVersion = 7
 		- var jsVersion = 2
 
 		- var assetBase = localEnv ? '' : 'http://nkwalton.brighamyounguniv.netdna-cdn.com/';
-		- var extension = localenv ? '.html' : '';
+		- var extension = localEnv ? '.html' : '';
 
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
