--- a/sass/_portfolio-intro.sass
+++ b/sass/_portfolio-intro.sass
@@ -49,3 +49,9 @@
 				letter-spacing: 1px
 				font-weight: 300
 				font-family: "ff-ernestine-web-pro", $slab-font-family
+	@media all and (min-width: 700px)
+		font-size: 0.9em
+	@media all and (min-width: 900px)
+		font-size: 1em
+	@media all and (min-width: 1100px)
+		font-size: 1.1em
