--- a/sass/_portfolio-intro.sass
+++ b/sass/_portfolio-intro.sass
@@ -49,9 +49,28 @@
 				letter-spacing: 1px
 				font-weight: 300
 				font-family: "ff-ernestine-web-pro", $slab-font-family
-	@media all and (min-width: 700px)
+				margin-left: -0.1em
+				.caps
+					font-size: 1em
+	@media (min-width: 450px)
+		font-size: 0.85em
+	@media (min-width: 600px)
 		font-size: 0.9em
-	@media all and (min-width: 900px)
+		.introimage
+			opacity: 0.2
+		.introtext
+			text-shadow: 0 0 10px #000
+	@media (min-width: 750px)
+		font-size: 0.95em
+	@media (min-width: 800px)
 		font-size: 1em
-	@media all and (min-width: 1100px)
+		.introimage
+			margin: 0 auto
+			opacity: 0.25
+			img
+				margin-left: -19em
+		.introtext
+			text-shadow: 0 0 10px #000, 0 0 20px #000
+	@media (min-width: 1200px)
 		font-size: 1.1em
+		
