--- a/sass/style.sass
+++ b/sass/style.sass
@@ -75,6 +75,7 @@ img
 	.slide 
 		position: absolute
 		width: 100%
+		max-width: 100%
 		.wrapper
 			&.imagewrapper, &.textwrapper
 				position: relative
@@ -82,6 +83,7 @@ img
 				display: none
 		&.intro .wrapper
 			margin-left: 5%
+			width: 90%
 		.infoinner
 			text-align: left
 			top: 15px
