Update local env json files, update .htaccess

--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,6 +1,6 @@
 html.no-js(lang="en")
 	head
-		- var localEnv = false;
+		- var localEnv = false
 		- var cssVersion = 3.6
 		- var jsVersion = 2
 
