--- a/jade/_layout.jade
+++ b/jade/_layout.jade
@@ -1,19 +1,19 @@
 html.no-js(lang="en")
 	head
-		- var localEnv = false
+		- var localEnv = env === 'local'
 		- var cssVersion = 3.6
-		- var jsVersion = 2
+		- var jsVersion = 2.1
 
-		- var assetBase = localEnv ? '' : 'http://nkwalton.brighamyounguniv.netdna-cdn.com/';
+		- var assetBase = assets;
 		- var extension = localEnv ? '.html' : '';
 
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 		block title
 			title Nate Walton: #{page.title}
-		meta(name='description', content='Description about your department.')
-		meta(name='author', content='Your Department Name')
-		meta(name='keywords', content='keyword 1, keyword 2, keyword 3')
+		block meta
+			meta(name='description', content='Nathan Walton\'s graphic design web site')
+			meta(name='keywords', content='design, responsive, web, web design, typography, portfolio, education, design education')
 		meta(name='viewport', content='width=device-width, , initial-scale=1')
 
 		// Place favicon.ico and apple-touch-icon.png in the root directory
@@ -26,8 +26,8 @@ html.no-js(lang="en")
 		script(type="text/javascript", src="//use.typekit.net/nyn3skg.js")
 		script(type="text/javascript").
 			try{Typekit.load();}catch(e){};
-			window.localAssets = #{localEnv};
 			window.jsVersion   = #{jsVersion};
+			window.assets      = "#{assetBase}";
 		script(src= assetBase + 'js/init.min.js?v=' + jsVersion)
 
 	body(class=page.menu)
