Update system for local, stage, and production deployment

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,8 @@
 /* style.sass */
 
+body
+	opacity: 1
+
 
 @import "base/normalize"
 @import "base/h5bp"
@@ -16,7 +19,7 @@
 
 html
 	font-family: $sans-font-family
-	background-color: #000
+	background-color: green
 
 body
 	height: 100%
