--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -12,12 +12,27 @@ $picture-width: ($picture-space - 3%) / $num-pictures // 28.96%
 $picture-height: $picture-width * 0.75
 
 
+// Fade on load
+body.home
+	.quote, .byline
+		opacity: 0
+		//transition: opacity 0.5s 0.5s ease
+
+
+body.home.load
+	.quote, .byline
+		//opacity: 1
+
+
+
 // Home page
 body.home
 	background-color: #fff
 	height: auto
 	max-height: initial
 	padding-top: 0
+
+	// Styles
 	header
 		position: fixed
 		top: 0
