--- a/sass/base/_basics.scss
+++ b/sass/base/_basics.scss
@@ -1,6 +1,6 @@
 // Basics.scss
 
-@import "shared/colors";
+@import "../shared/colors";
 
 /*** Base tags ***/
 html, body { width:100%; overflow-x:hidden; }
