--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,9 +1,5 @@
 /* style.sass */
 
-body
-	opacity: 1
-
-
 @import "base/normalize"
 @import "base/h5bp"
 @import "base/basics"
@@ -19,7 +15,7 @@ body
 
 html
 	font-family: $sans-font-family
-	background-color: green
+	background-color: #000
 
 body
 	height: 100%
