--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -18,11 +18,13 @@ body.home
 		opacity: 0
 		transition: opacity 0.75s ease
 	.quote
-		transition-delay: 0.75s
-	.byline
-		transition-delay: 1s
-	.wrapper
 		transition-delay: 1.5s
+		transition-duration: 1.5s
+	.byline
+		transition-delay: 2.5s
+		transition-duration: 1.5s
+	.wrapper
+		transition-delay: 0.5s
 
 
 body.home.load
