--- a/sass/shared/_colors.sass
+++ b/sass/shared/_colors.sass
@@ -13,6 +13,11 @@ $scheme9:  #333, #2E86AB, #F2F4F3, #AD343E, #D17A22 // Sweet
 $scheme10: #333, #2E86AB, #F2F4F3, #AD343E, #E2FCEF // Fresh
 $scheme11: #333, #2E86AB, #FCF7F8, #AD343E, #F2F4F3 // Patriotic
 $scheme12: #333, #2E86AB, #F2F4F3, #AD343E, #D5A021 // Sunset
+$scheme13: #333, #3581B8, #FFFFFF, #508484, #79C99E // Wintergreen
+$scheme14: #333, #3581B8, #FFFFFF, #011638, #177E89 // Strong Blue
+$scheme15: #222, #3581B8, #FFFFFF, #5EB1BF, #912F56 // RBG Sophisticated 
+$scheme16: #222, #3581B8, #FFFFFF, #FFA630, #9FCC2E // Fresh Kapow
+$scheme17: #222, #3581B8, #FFFFFF, #FF206E, #9FCC2E // Awesome
 
 $blue1: #2E86AB
 $blue4: #2E86AB
